fixed some button align

--- a/public/src/vue/less/_modal.less
+++ b/public/src/vue/less/_modal.less
@@ -58,6 +58,7 @@
 
   width: 100%;
   cursor: auto;
+  pointer-events: all;
 
   max-width: @t-panelWidth;
   margin: 5vmin 5vmin;
@@ -315,7 +316,6 @@
 
   button[type="submit"] {
     .bg-bleuvert; 
-    .button-inline;
     color: @c-bleumarine;
     color: white;
   }
